# xabot

./: .env_example  .gitignore  __main__.py  pyproject.toml  requirements.txt  test.py
app/configs/: config_example.json  streamers.json  streamers_example.json
app/modules/: commands.py  general.py  rcon.py  ticket_system.py  twitch.py
app/utils/: bot.py  constants.py  logger.py  slash.py
