[tool.poetry]
name = "XaBot"
version = "0.1"
description = "A discord bot multipurpose"
authors = ["FranDev <olmelofran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^1.7.3"
requests = "^2.27.1"
rcon = "^2.2.0"
discord-py-slash-command = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
